SonarCloud code smells fixed